--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -1,9 +1,54 @@
- :root {
-    font-size: 16px;
-    font-family: vapor;
-    --text-primary: white;
-    --text-secondary: rgba(255,255,255,.5);
-    --bg-primary: rgba(0,0,0,.25);
-    --bg-secondary: rgba(0,0,0,.5);
-    --transition-speed: 500ms;
-  }
+:root {
+	font-size: 16px;
+	font-family: vapor;
+	--text-primary: white;
+	--text-secondary: rgba(255, 255, 255, .5);
+	--bg-primary: rgba(0, 0, 0, .25);
+	--bg-secondary: rgba(0, 0, 0, .5);
+	--transition-speed: 500ms;
+}
+
+button {
+	border: none;
+  background-color: var(--bg-secondary);
+  text-transform: uppercase;
+	font-size: 20px;
+	color: white;
+  font-family: vapor;
+  padding: 10px;
+}
+
+*::-webkit-scrollbar {
+  left: 10px;
+  background-color: var(--bg-primary);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--bg-secondary);
+}
+
+p {
+	color: white;
+	font-family: vapor;
+	font-size: 25px;
+	text-transform: uppercase;
+}
+
+input {
+  border: none;
+  background-color: var(--bg-secondary);
+  padding: 10px;
+  font-size: 20px;
+  color: white;
+}
+
+input::placeholder {
+  color: white;
+  opacity: 0.75;
+}
+
+h2 {
+  user-select: none;
+  color: var(--text-primary);;
+  font-family: vapor;
+}
