--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,14 +39,14 @@ button {
   /*Header*/
 
 .header {
-    background-color: var(--bg-primary);;
+    background-color: var(--bg-primary);
     position: fixed;
     top: 0px;
     left: 0px;
     width: 100vw;
     height: 75px;
     line-height: 75px;
-    backdrop-filter: blur(20px);
+    backdrop-filter: var(--blur);
     display: flex;
 }
 
@@ -119,7 +119,7 @@ button {
     user-select: none;
     font-family: vapor;
     color: var(--text-secondary);
-    backdrop-filter: blur(20px);
+    backdrop-filter: var(--blur);
     transition:min-width .25s;
 }
 
