--- a/assets/css/store.css
+++ b/assets/css/store.css
@@ -1,57 +1,60 @@
 .list-container {
-    position: relative;
-    height: calc(100vh - 150px);
+	position: relative;
+	height: calc(100vh - 150px);
 }
 
 .game-store-sort {
-  height: 75px;
+	height: 75px;
   width: 100%;
-  background-color: var(--bg-primary);
-  display: flex;
-  flex-direction: row;
-  justify-content: start;
-  align-items: center;
+	background-color: transparent;
+	display: flex;
+	flex-direction: row;
+	justify-content: start;
+	align-items: center;
 }
 
 .game-store-sort p {
-  margin-left: 25px;
+	margin-left: 20px;
 }
 
 .game-search {
-  margin-left: auto;
-  margin-right: 15px;
+	margin-left: 20px;
 }
 
 .game-store-list {
-  overflow: auto;
-  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+	height: 100%;
   width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 .game-div {
-  position: relative;
-  border: none;
-  width: 200px;
-  margin: 10px;
-  height: 300px;
-  margin-bottom: 55px;
+	position: relative;
+	border: none;
+	width: 200px;
+	margin: 10px;
+	height: fit-content;
+	margin-bottom: auto;
 }
 
 .game-cover {
-  width: 100%;
-  border-radius: 25px;
-  height: 266px;
+	width: 100%;
+	border-radius: 15px;
+	height: 266px;
 }
 
 .game-name {
-  text-align: center;
-  color: white;
-  font-family: vapor;
-  text-transform: uppercase;
-  font-size: 25px;
-  margin-top: -0px;
+	text-align: center;
+	color: white;
+	font-family: vapor;
+	text-transform: uppercase;
+	font-size: 25px;
+	margin-top: 10px;
+	padding: 10px;
+	background-color: var(--bg-secondary);
+	border-radius: 15px;
 }
