--- a/assets/css/generate.css
+++ b/assets/css/generate.css
@@ -15,20 +15,12 @@ input {
 	margin-bottom: 10px;
 }
 
-.settings {
-	height: 100%;
-	overflow-y: auto;
-	direction: rtl;
+/* Generate Games List */
+
+#generate-details {
+	display: block;
 }
 
-/* Custom Wallpaper */
-
-.custom-wallpaper button {
-	margin-right: 10px;
-}
-
-/* IGDB Login */
-
-#igdb-details {
+#generate-details:placeholder-shown {
 	display: none;
 }
