--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -114,3 +114,11 @@ div::-webkit-scrollbar {
 	text-align: center;
 	font-size: 25px;
 }
+
+.info-button {
+	position: relative;
+	margin-left: 20px;
+	width: calc(100% - 40px);
+	height: 50px;
+	margin-bottom: 20px;
+}
