--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -23,6 +23,7 @@ button {
 *::-webkit-scrollbar {
 	left: 10px;
 	background-color: var(--bg-primary);
+	backdrop-filter: var(--blur);
 }
 
 *::-webkit-scrollbar-thumb {
@@ -67,3 +68,56 @@ i {
   position: relative;
   user-select: none;
 }
+
+/* Toggle Switch */
+
+.switch {
+	position: relative;
+	display: inline-block;
+	width: 60px;
+	height: 34px;
+  }
+  
+  .switch input { 
+	opacity: 0;
+	width: 0;
+	height: 0;
+  }
+  
+  .slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: var(--bg-primary);
+	-webkit-transition: .4s;
+	transition: .4s;
+  }
+  
+  .slider:before {
+	position: absolute;
+	content: "";
+	height: 26px;
+	width: 26px;
+	left: 4px;
+	bottom: 4px;
+	background-color: var(--bg-primary);
+	-webkit-transition: .4s;
+	transition: .4s;
+  }
+  
+  input:checked + .slider {
+	background-color: var(--bg-secondary);
+  }
+  
+  input:focus + .slider {
+	box-shadow: 0 0 1px var(--bg-secondary);
+  }
+  
+  input:checked + .slider:before {
+	-webkit-transform: translateX(26px);
+	-ms-transform: translateX(26px);
+	transform: translateX(26px);
+  }
