--- a/app/css/overlays.css
+++ b/app/css/overlays.css
@@ -23,8 +23,10 @@
 }
 .overlays .snackbar-container .mdc-snackbar .snack-flex .snack-content {
   display: flex;
-  padding-bottom: 4px;
   width: 100%;
+}
+.overlays .snackbar-container .mdc-snackbar .snack-flex .snack-content.progress-true {
+  padding-bottom: 4px;
 }
 .overlays .snackbar-container .mdc-snackbar .snack-flex .snack-content .mdc-snackbar__actions {
   margin-left: auto;
