--- a/app/scss/installed.scss
+++ b/app/scss/installed.scss
@@ -1,5 +1,5 @@
-.exec-dialog {
-    #exec-dialog-content {
+.mdc-dialog {
+    .mdc-dialog__content {
         display: flex;
         flex-direction: column;
 
