--- a/app/css/installed.css
+++ b/app/css/installed.css
@@ -1,7 +1,7 @@
-.exec-dialog #exec-dialog-content {
+.mdc-dialog .mdc-dialog__content {
   display: flex;
   flex-direction: column;
 }
-.exec-dialog #exec-dialog-content button {
+.mdc-dialog .mdc-dialog__content button {
   margin: 10px;
 }
