--- a/app/css/store.css
+++ b/app/css/store.css
@@ -58,7 +58,7 @@
   height: 515px !important;
   align-items: center;
 }
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-top #dialog-game-description {
+.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-top .dialog-game-description {
   height: 515px;
   max-width: 500px;
   overflow-y: scroll;
@@ -66,7 +66,7 @@
   display: flex;
   flex-direction: column;
 }
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-top #dialog-game-description::-webkit-scrollbar {
+.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-top .dialog-game-description::-webkit-scrollbar {
   display: none;
 }
 .mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-top img {
@@ -100,9 +100,7 @@
   display: flex;
   overflow-x: auto;
   margin-top: 8px;
-}
-.mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-bottom .game-screenshots::-webkit-scrollbar {
-  display: none;
+  border-radius: 10px;
 }
 .mdc-dialog .mdc-dialog__surface .mdc-dialog__content .dialog-bottom .game-screenshots img {
   object-fit: cover;
