--- a/app/scss/root.scss
+++ b/app/scss/root.scss
@@ -43,6 +43,25 @@ body {
     font-family: sans-serif;
     background-color: var(--mdc-theme-background);
 
+    *::-webkit-scrollbar {
+        width: 10px;
+        border: 5px solid white;
+        height: 10px;
+    }
+
+    *::-webkit-scrollbar-thumb {
+        border-radius: 5px;
+        background-color: #c1c1c1;
+    }
+
+    *::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+    /* Buttons */
+    *::-webkit-scrollbar-button:single-button {
+        display: none;
+    }
+
     .mdc-top-app-bar {
         z-index: 7;
         box-shadow: 0 2px 4px rgba(66, 66, 66, 0.5);
@@ -58,7 +77,7 @@ body {
             display: flex;
             width: fit-content;
             height: 38px;
-            background: rgba(0,0,0,.1);
+            background: rgba(0, 0, 0, 0.1);
             cursor: pointer;
 
             .ui-titlecontrols {
