--- a/app/scss/installed.scss
+++ b/app/scss/installed.scss
@@ -3,8 +3,13 @@
         display: flex;
         flex-direction: column;
 
-        button {
+        .execrow {
+            display: flex;
             margin: 10px;
+
+            .mdc-fab {
+                height: 10px;
+            }
         }
     }
 }
