--- a/app/scss/root.scss
+++ b/app/scss/root.scss
@@ -155,6 +155,10 @@ body {
                     margin-block-start: 0 !important;
                 }
             }
+
+            .mdc-menu, .mdc-list, .mdc-list > *  {
+                z-index: 50;
+            }
         }
     }
 
